--- a/Nico/index.html
+++ b/Nico/index.html
@@ -17,7 +17,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "IntegrateApp",
+		"name": "IntegrApp",
 		"logo": "images/WhatsAppImage2022-11-19at17.33.381.jpeg"
 }</script>
     <meta name="theme-color" content="#478ac9">
@@ -38,20 +38,22 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Local-Resident-Welcome.html" style="padding: 10px 20px;">Local Resident Welcome</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Refugee-Welcome.html" style="padding: 10px 20px;">Refugee Welcome</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Homepage.html" style="padding: 10px 20px;">Homepage</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Find-Items.html" style="padding: 10px 20px;">Find Items</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Local-Resident-Welcome.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Local Resident Welcome&quot;,&quot;href&quot;:&quot;Local-Resident-Welcome.html&quot;}">Local Resident Welcome</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Refugee-Welcome.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Refugee Welcome&quot;,&quot;href&quot;:&quot;Refugee-Welcome.html&quot;}">Refugee Welcome</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Homepage.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Homepage&quot;,&quot;href&quot;:&quot;Homepage.html&quot;}">Homepage</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Find-Items.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Find Items&quot;,&quot;href&quot;:&quot;Find-Items.html&quot;}">Find Items</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-4-base u-text-hover-palette-3-base" href="Seite-1.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Seite 1&quot;,&quot;href&quot;:&quot;Seite-1.html&quot;}">Seite 1</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Local-Resident-Welcome.html">Local Resident Welcome</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Refugee-Welcome.html">Refugee Welcome</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Homepage.html">Homepage</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Find-Items.html">Find Items</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Local-Resident-Welcome.html" data-lang-en="{&quot;content&quot;:&quot;Local Resident Welcome&quot;,&quot;href&quot;:&quot;Local-Resident-Welcome.html&quot;}">Local Resident Welcome</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Refugee-Welcome.html" data-lang-en="{&quot;content&quot;:&quot;Refugee Welcome&quot;,&quot;href&quot;:&quot;Refugee-Welcome.html&quot;}">Refugee Welcome</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Homepage.html" data-lang-en="{&quot;content&quot;:&quot;Homepage&quot;,&quot;href&quot;:&quot;Homepage.html&quot;}">Homepage</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Find-Items.html" data-lang-en="{&quot;content&quot;:&quot;Find Items&quot;,&quot;href&quot;:&quot;Find-Items.html&quot;}">Find Items</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Seite-1.html" data-lang-en="{&quot;content&quot;:&quot;Seite 1&quot;,&quot;href&quot;:&quot;Seite-1.html&quot;}">Seite 1</a>
 </li></ul>
               </div>
             </div>
