--- a/Nico/Find-Items.html
+++ b/Nico/Find-Items.html
@@ -90,7 +90,7 @@
         </div>
       </div>
     </section>
-    <section class="u-align-left u-clearfix u-custom-color-2 u-typography-Normal--Introduction u-section-2" src="" id="sec-c173">
+    <section class="u-align-left u-clearfix u-custom-color-2 u-typography-Normal--Introduction u-section-2" src="" id="carousel_9bf6">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-black u-text-1" data-lang-en="We help travelers">Gadgets</h2>
         <h5 class="u-align-center u-text u-text-black u-text-2" data-lang-en="Online Travel Agency ">view all &gt;&gt;</h5>
@@ -99,19 +99,19 @@
             <div class="u-align-left u-container-style u-custom-color-1 u-list-item u-radius-20 u-repeater-item u-shape-round u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h3 class="u-text u-text-3" data-lang-en="Travel">laptop</h3>
-                <img class="u-image u-image-contain u-image-round u-radius-10 u-image-1" src="images/3cc65e393a23129800446f81eeb1c6cfe76638c5322df5e6c404099082e1bf8f637addef48afdc7b595d33e28ad803dc0dfe86abf3a908315df5e9_1280.jpg" alt="" data-image-width="1280" data-image-height="853"><span class="u-file-icon u-icon u-icon-rectangle u-icon-1"><img src="images/1077035-880c8cea.png" alt=""></span>
+                <img class="u-image u-image-contain u-image-round u-radius-10 u-image-1" src="images/3cc65e393a23129800446f81eeb1c6cfe76638c5322df5e6c404099082e1bf8f637addef48afdc7b595d33e28ad803dc0dfe86abf3a908315df5e9_1280.jpg" alt="" data-image-width="1280" data-image-height="853"><span class="u-file-icon u-icon u-text-white u-icon-1"><img src="images/1077035-880c8cea.png" alt=""></span>
               </div>
             </div>
             <div class="u-align-left u-container-style u-custom-color-1 u-custom-item u-list-item u-radius-20 u-repeater-item u-shape-round u-video-cover u-list-item-2">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <h3 class="u-text u-text-4" data-lang-en="Benefits">tablet</h3>
-                <img class="u-image u-image-contain u-image-round u-radius-10 u-image-2" src="images/adb221f42d4abfc7d569f6efbabc92ef2a0a877c22cd9a09aab4252f856ba282c28941f706b32a4612b24476118b7bdc1607258003f77bc0eeddcc_1280.png" alt="" data-image-width="859" data-image-height="1280"><span class="u-file-icon u-icon u-icon-2"><img src="images/6063477.png" alt=""></span>
+                <img class="u-image u-image-contain u-image-round u-radius-10 u-image-2" src="images/adb221f42d4abfc7d569f6efbabc92ef2a0a877c22cd9a09aab4252f856ba282c28941f706b32a4612b24476118b7bdc1607258003f77bc0eeddcc_12801.png" alt="" data-image-width="859" data-image-height="1280"><span class="u-file-icon u-icon u-icon-2"><img src="images/6063477.png" alt=""></span>
               </div>
             </div>
             <div class="u-align-left u-container-style u-custom-color-1 u-list-item u-radius-20 u-repeater-item u-shape-round u-video-cover u-list-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <h3 class="u-text u-text-5" data-lang-en="About Us">phone</h3>
-                <img class="u-image u-image-contain u-image-round u-radius-10 u-image-3" src="images/a616cbd4a8e4fb28f9dc5ff161dada2bcdbcda544f2dc5328bcf5d750da829aa2db13900e9abfd1a55f6ffe3bb28382fa54d5ceff67cdfea41c7b3_1280.png" alt="" data-image-width="640" data-image-height="1280"><span class="u-file-icon u-icon u-icon-rectangle u-icon-3"><img src="images/1077035-880c8cea.png" alt=""></span>
+                <img class="u-image u-image-contain u-image-round u-radius-10 u-image-3" src="images/a616cbd4a8e4fb28f9dc5ff161dada2bcdbcda544f2dc5328bcf5d750da829aa2db13900e9abfd1a55f6ffe3bb28382fa54d5ceff67cdfea41c7b3_12801.png" alt="" data-image-width="640" data-image-height="1280"><span class="u-file-icon u-icon u-text-white u-icon-3"><img src="images/1077035-880c8cea.png" alt=""></span>
               </div>
             </div>
           </div>
