find items file placing problem now corrected again

--- a/Nico/Find-Items.html
+++ b/Nico/Find-Items.html
@@ -99,7 +99,7 @@
             <div class="u-align-left u-container-style u-custom-color-1 u-list-item u-radius-20 u-repeater-item u-shape-round u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h3 class="u-text u-text-3" data-lang-en="Travel">laptop</h3>
-                <img class="u-image u-image-contain u-image-round u-radius-10 u-image-1" src="images/3cc65e393a23129800446f81eeb1c6cfe76638c5322df5e6c404099082e1bf8f637addef48afdc7b595d33e28ad803dc0dfe86abf3a908315df5e9_1280.jpg" alt="" data-image-width="1280" data-image-height="853"><span class="u-file-icon u-icon u-text-white u-icon-1"><img src="images/1077035-880c8cea.png" alt=""></span>
+                <img class="u-image u-image-contain u-image-round u-radius-10 u-image-1" src="images/06546da4b08735d5f520869c702a2fd35062c8e90e5bc1da69b598f9e1abfd030ecc153dc33fabf7dd12f43e5c8be908e6d2ee2a7bafa552fc2f68_1280.png" alt="" data-image-width="1280" data-image-height="874"><span class="u-file-icon u-icon u-text-white u-icon-1"><img src="images/1077035-880c8cea.png" alt=""></span>
               </div>
             </div>
             <div class="u-align-left u-container-style u-custom-color-1 u-custom-item u-list-item u-radius-20 u-repeater-item u-shape-round u-video-cover u-list-item-2">
